--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
+
+table{
+  border-collapse: collapse;
   text-align: center;
+  margin-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.subject{
+  width: 180px;
   color: white;
+  background-color: black;
+}
+.totalTable td {
+  height: 58px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.totalSubject{
+  width: 230px;
+  color: white;
+  background-color: black;
 }
